# tarpc_interprocess

./: Cargo.toml
src/: client.rs  lib.rs  server.rs
